--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#db
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringDemo
+spring.datasource.username=root
+spring.datasource.password=15388361633cm
+com.mysql.cj.jdbc.Driver
 
+
+spring.thymeleaf.cache=false
+
+
+server.port=6050
